src/test/compile-fail/writing-to-immutable-rec.rs
// error-pattern: assignment to immutable field
fn main() {
  let rec(int x) r = rec(x=1);
  r.x = 6;
}
